--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,61 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #000;
+    margin: 0;
+    padding: 0;
+    text-align: center;
     color: #eeee;
+    background-color: #000;
+
+}
+
+header{
+    padding: 20px 0;
+}
+
+.contact-form{
+    padding: 20px;
 }
 
 form{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 20px;
-    font-weight: 500;
-    border: 3px solid #eee;
-    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label, input, textarea, button{
+    margin: 10px 0;
+    width: 300px;
+    border: none;
     border-radius: 10px;
-}
-
-input, textarea{
-    background: none;
-    border: 1px solid #fff;
-    outline: none;
-    color: #eee;
+    padding:5px;
     font-size: 20px;
-    width: 100%;
-    border-radius: 8px;
-}
-
-textarea{
-    height: 150px;
 }
 
 button{
-    border: none;
-    padding: 10px 35px;
+    background-color:#eeee;
+    color: #000;
     font-size: 20px;
     font-weight: bold;
-    border-radius: 8px;
+    border: none;
+    padding: 10px;
     cursor: pointer;
-    background-color: #eee;
+    border-radius: 10px;
 }
 
 button:hover{
-  transform: scale(1.05);
+    opacity:80%;
 }
 
-
+footer{
+    padding: 10px 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
